--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <body id="body">
 
+        <a href="https://www.mediafire.com/file/3t1aznc24i79sjx/Ball_Jumper_iOS.zip/file">iOS dl</a>
+
         <div id="gameContainer">
             <img class="gif" src="NoTanksLeft.gif">
             <div id="gameText">
