--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
     <body id="body">
 
-        <a href="https://www.mediafire.com/file/3t1aznc24i79sjx/Ball_Jumper_iOS.zip/file">iOS dl</a>
-
         <div id="gameContainer">
             <img class="gif" src="NoTanksLeft.gif">
             <div id="gameText">
@@ -22,24 +20,37 @@
                     <li>Local Multiplayer</li>
                     <li>Party Game</li>
                 </ul>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni eos, quis, laudantium iste veritatis omnis illo ullam dignissimos earum accusamus nihil mollitia ratione blanditiis doloremque error! Ipsa qui ad quisquam. </div>
+                This was a game I completed for a school project. The game is played by only using one button, which turns you right. The tanks will constantly move and shoot. The game can fit as many players as there are keys on a keyboard. I was responsible for coding
+                and designing the game, and my partner helped create some of the art assets.error! Ipsa qui ad quisquam. </div>
             <div id="emptyBlock"></div>
         </div>
 
         <div id="gameContainer">
-            <img class="gif" src="NoTanksLeft.gif">
+            <img class="gif" src="ThePatient.gif">
+            <div id="gameText">
+                <div id="gameTitle">The Patient</div>
+                <ul id="gameList">
+                    <li>3D Immersive Horror</li>
+                    <li>Puzzle</li>
+                </ul>
+                This was a game I worked on with a close friend of mine. The goal of the game is to make your way through the depths of an abandon hospital and escape. However, you are not alone. I was reponsible for coding and my partner created the story and the map.
+            </div>
+            <div id="emptyBlock"></div>
+        </div>
+
+        <div id="gameContainer">
+            <img class="gif" src="ShapeOfTheForest.gif">
             <div id="gameText">
                 <div id="gameTitle">Shape of the Forest</div>
                 <ul id="gameList">
-                    <li>2D Action Platformer</li>
-                    <li>In Development</li>
+                    <li>Game Jam</li>
+                    <li>Simulation</li>
                 </ul>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni eos, quis, laudantium iste veritatis omnis illo ullam dignissimos earum accusamus nihil mollitia ratione blanditiis doloremque error! Ipsa qui ad quisquam.</div>
-            <div id="emptyBlock"></div>
         </div>
 
         <div id="gameContainer">
-            <img class="gif" src="NoTanksLeft.gif">
+            <img class="gif" src="Ascension.gif">
             <div id="gameText">
                 <div id="gameTitle">Ascension</div>
                 <ul id="gameList">
@@ -60,17 +71,6 @@
                 </ul>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni eos, quis, laudantium iste veritatis omnis illo ullam dignissimos earum accusamus nihil mollitia ratione blanditiis doloremque error! Ipsa qui ad quisquam.</div>
             <div id="emptyBlock"></div>
-        </div>
-
-        <div id="gameContainer">
-            <img class="gif" src="NoTanksLeft.gif">
-            <div id="gameText">
-                <div id="gameTitle">Space Space Manager</div>
-                <ul id="gameList">
-                    <li>Game Jam</li>
-                    <li>Simulation</li>
-                </ul>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni eos, quis, laudantium iste veritatis omnis illo ullam dignissimos earum accusamus nihil mollitia ratione blanditiis doloremque error! Ipsa qui ad quisquam.</div>
         </div>
 
     </body>
