--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <li>Local Multiplayer</li>
                     <li>Party Game</li>
                 </ul>
-                This was a game I completed for a school project. The game is played by only using one button, which turns you right. The tanks will constantly move and shoot. The game can fit as many players as there are keys on a keyboard. I was responsible for coding
-                and designing the game, and my partner helped create some of the art assets.error! Ipsa qui ad quisquam. </div>
+                No Tanks Left is a game I completed for a school project. The game is played by only using one button, which turns you right. The tanks will constantly move and shoot. The game can fit as many players as there are keys on a keyboard. I was responsible
+                for coding and designing the game, and my partner helped create some of the art assets.error! Ipsa qui ad quisquam. </div>
             <div id="emptyBlock"></div>
         </div>
 
@@ -33,7 +33,8 @@
                     <li>3D Immersive Horror</li>
                     <li>Puzzle</li>
                 </ul>
-                This was a game I worked on with a close friend of mine. The goal of the game is to make your way through the depths of an abandon hospital and escape. However, you are not alone. I was reponsible for coding and my partner created the story and the map.
+                The Patient was a game I worked on with a close friend of mine. The goal of the game is to make your way through the depths of an abandon hospital and escape. However, you are not alone. I was reponsible for coding and my partner created the story and
+                the map.
             </div>
             <div id="emptyBlock"></div>
         </div>
@@ -43,22 +44,25 @@
             <div id="gameText">
                 <div id="gameTitle">Shape of the Forest</div>
                 <ul id="gameList">
-                    <li>Game Jam</li>
-                    <li>Simulation</li>
+                    <li>Action Platformer</li>
+                    <li>2D Dark Souls</li>
                 </ul>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni eos, quis, laudantium iste veritatis omnis illo ullam dignissimos earum accusamus nihil mollitia ratione blanditiis doloremque error! Ipsa qui ad quisquam.</div>
+                This is a game I am currently working on with a small group of friends. I am in charge of code and development tools which includes, Player Controller, AI, State Machine, Editor Tools, etc. This game has been under development for about 4 months now,
+                and we attend to spend another 8 months working on it.
+            </div>
         </div>
 
         <div id="gameContainer">
-            <img class="gif" src="Ascension.gif">
+            <img class="gif" src="HotlineElf.gif">
             <div id="gameText">
-                <div id="gameTitle">Ascension</div>
+                <div id="gameTitle">Hotline Elf</div>
                 <ul id="gameList">
-                    <li>Rope Swing Mechanic / Grappling Hook</li>
-                    <li>Prototype</li>
+                    <li>Action Shooter</li>
+                    <li>Game Jam</li>
                 </ul>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni eos, quis, laudantium iste veritatis omnis illo ullam dignissimos earum accusamus nihil mollitia ratione blanditiis doloremque error! Ipsa qui ad quisquam.</div>
-            <div id="emptyBlock"></div>
+                Hotline Elf is a game I completed in one day at the Tilted Shed Studios Game Jam Event. The two theme words were "eating" and "elf". Our game revolves around eating other elves, using special moves, and gaining power ups. We were even able to add a boss.
+                We managed to tie for first place.
+            </div>
         </div>
 
         <div id="gameContainer">
@@ -66,10 +70,24 @@
             <div id="gameText">
                 <div id="gameTitle">Space Space Manager</div>
                 <ul id="gameList">
+                    <li>Management / Simulation</li>
                     <li>Game Jam</li>
-                    <li>Simulation</li>
                 </ul>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni eos, quis, laudantium iste veritatis omnis illo ullam dignissimos earum accusamus nihil mollitia ratione blanditiis doloremque error! Ipsa qui ad quisquam.</div>
+                Space Space Manager is a game I completed in two days with a friend of mine. The theme of the jam was "Space". The gameplay revolves around managing the inventory of your ship by making sure you have enough fuel to make it to the next planet, but also
+                keeping the most value items possible to make money. We got 5th place.
+            </div>
+            <div id="emptyBlock"></div>
+        </div>
+
+        <div id="gameContainer">
+            <img class="gif" src="Ascension.gif">
+            <div id="gameText">
+                <div id="gameTitle">Ascension</div>
+                <ul id="gameList">
+                    <li>Prototype</li>
+                    <li>Rope Swing Mechanic / Grappling Hook</li>
+                </ul>
+                Ascension is a prototype game I created in a few days but eventually abandonded. The plans of the game involved using a rope swing and physics. to navigate through levels.</div>
             <div id="emptyBlock"></div>
         </div>
 
