--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div id="gameContainer">
-            <img class="gif" src="ThePatient.gif">
+            <img class="gif" src="Patient.gif" width="400">
             <div id="gameText">
                 <div id="gameTitle">The Patient</div>
                 <ul id="gameList">
