About page added
About, Proficiencies, Contact, Buttons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 
 <div id="header">
-    <header>Luke Bradaric</header>
+    <header>Luke Bradaric
+        <!-- <button>Contact<a href="contact.html"></a></button> -->
+        <a href="contact.html"><button id="contactButton">About</button></a>
+    </header>
+
 </div>
 
 <div>
@@ -66,6 +70,7 @@
         </div>
 
         <div id="gameContainer">
+
             <img class="gif" src="SpaceSpaceManager.gif">
             <div id="gameText">
                 <div id="gameTitle">Space Space Manager</div>
