Contact padding fix

--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,11 @@
 
             <ul id="list">
 
-                <li id="contactLink">
+                <li>
                     <a href="mailto: lukebradaric@gmail.com" , id="contactLink">Email - lukebradaric@gmail.com</a>
                 </li>
 
-                <li id="contactLink">
+                <li style="padding-top:10px;">
                     <a href="https://github.com/lukebradaric" , id="contactLink">Github - lukebradaric</a>
                 </li>
 
