contact padding fix

--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,11 @@
 
             <ul id="list">
 
-                <li>
+                <li id="contactLink">
                     <a href="mailto: lukebradaric@gmail.com" , id="contactLink">Email - lukebradaric@gmail.com</a>
                 </li>
 
-                <li style="padding-top:10px;">
+                <li id="contactLink">
                     <a href="https://github.com/lukebradaric" , id="contactLink">Github - lukebradaric</a>
                 </li>
 
