--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li>Party Game</li>
                 </ul>
                 No Tanks Left is a game I completed for a school project. The game is played by only using one button, which turns you right. The tanks will constantly move and shoot. The game can fit as many players as there are keys on a keyboard. I was responsible
-                for coding and designing the game, and my partner helped create some of the art assets.error! Ipsa qui ad quisquam. </div>
+                for coding and designing the game, and my partner helped create some of the art assets.</div>
             <div id="emptyBlock"></div>
         </div>
 
