--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 
+<meta name="description" , content="Game Developer And Software Engineer" />
+
 <head>
     <link rel="stylesheet" href="style.css">
 </head>
