new games, about page fix

--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,12 @@
 <div>
 
     <body id="body">
-        <div id="about" , style="padding-bottom: 30px; font-size: 18;">
+        <div id="about" , style="padding-bottom: 10px; font-size: 18;">
 
             <div id="aboutTitle">About</div>
 
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere iusto natus unde, earum, voluptates quo vero expedita perferendis quidem error minima. Aliquam impedit quasi repellat excepturi quo commodi est minima?</div>
+            <div>I started coding when I was 16 and soon after discovered I could create video games which pushed me to pursue coding even further. I have spent countless hours playing Video games while growing up. To name a few, Minecraft, Portal, and Counter-Strike
+                are some of my favorites, and the thought that I may someday create something similar continues to inspire me.</div>
         </div>
 
         <div id="about">
@@ -28,12 +29,6 @@
             <div id="aboutTitle">Proficiencies</div>
             <ul id="list">
 
-                <div id="aboutSubTitle" , style="padding-top: 0px;">Software</div>
-
-                <li>Unity Engine</li>
-                <li>Audacity</li>
-                <li>Adobe Photoshop</li>
-
                 <div id="aboutSubTitle">Programming Languages</div>
 
                 <li>C#</li>
@@ -41,6 +36,14 @@
                 <li>Python</li>
                 <li>Html</li>
                 <li>Css</li>
+
+                <div id="aboutSubTitle" , style="padding-top: 20px;">Software</div>
+
+                <li>Unity Engine</li>
+                <li>Adobe Photoshop</li>
+                <li>Audacity</li>
+                <li>Sony Vegas Pro</li>
+
             </ul>
 
         </div>
