--- a/index.html
+++ b/index.html
@@ -31,16 +31,14 @@
         </div>
 
         <div id="gameContainer">
-            <img class="gif" src="Patient.gif">
+            <img class="gif" src="Hopson.gif">
             <div id="gameText">
-                <div id="gameTitle">The Patient</div>
+                <div id="gameTitle">Hopson</div>
                 <ul id="gameList">
-                    <li>3D Immersive Horror</li>
                     <li>Puzzle</li>
+                    <li>Arcade</li>
                 </ul>
-                The Patient was a game I worked on with a close friend of mine. The goal of the game is to make your way through the depths of an abandon hospital and escape. However, you are not alone. I was reponsible for coding and my partner created the story and
-                the map.
-            </div>
+                Hopson is a puzzle game based heavily around movement. By consecutively jumping the player gains speed, this mechanic was based off of bhopping from counter-strike, one of my favorite games.</div>
         </div>
 
         <div id="gameContainer">
@@ -57,6 +55,19 @@
         </div>
 
         <div id="gameContainer">
+            <img class="gif" src="Patient.gif">
+            <div id="gameText">
+                <div id="gameTitle">The Patient</div>
+                <ul id="gameList">
+                    <li>3D Immersive Horror</li>
+                    <li>Puzzle</li>
+                </ul>
+                The Patient was a game I worked on with a close friend of mine. The goal of the game is to make your way through the depths of an abandon hospital and escape. However, you are not alone. I was reponsible for coding and my partner created the story and
+                the map.
+            </div>
+        </div>
+
+        <div id="gameContainer">
             <img class="gif" src="HotlineElf.gif">
             <div id="gameText">
                 <div id="gameTitle">Hotline Elf</div>
@@ -66,6 +77,18 @@
                 </ul>
                 Hotline Elf is a game I completed in one day at the Tilted Shed Studios Game Jam Event. The two theme words were "eating" and "elf". Our game revolves around eating other elves, using special moves, and gaining power ups. We were even able to add a boss.
                 We managed to tie for first place.
+            </div>
+        </div>
+
+        <div id="gameContainer">
+            <img class="gif-vert" src="Bounceio.gif">
+            <div id="gameText">
+                <div id="gameTitle">Bounceio</div>
+                <ul id="gameList">
+                    <li>Hyper Casual</li>
+                    <li>Mobile</li>
+                </ul>
+                Bounce IO is a hyper casual game I created in order to learn more about mobile games. I was able to successfully build the game and play on an iOS device.
             </div>
         </div>
 
