home page update

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <div id="header">
     <header>Luke Bradaric
         <!-- <button>Contact<a href="contact.html"></a></button> -->
-        <a href="index.html"><button id="contactButton">Home</button></a>
+        <a href="home.html"><button id="contactButton">Home</button></a>
     </header>
 
 </div>
