--- a/index.html
+++ b/index.html
@@ -1,128 +1,159 @@
 <html>
+  <meta name="description" , content="Game Developer And Software Engineer" />
 
-<meta name="description" , content="Game Developer And Software Engineer" />
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<div id="header">
-    <header>Luke Bradaric
-        <!-- <button>Contact<a href="contact.html"></a></button> -->
-        <a href="contact.html"><button id="contactButton">About</button></a>
+  <div id="header">
+    <header>
+      Luke Bradaric
+      <!-- <button>Contact<a href="contact.html"></a></button> -->
+      <a href="contact.html"><button id="contactButton">About</button></a>
     </header>
+  </div>
 
-</div>
-
-<div>
-
+  <div>
     <body id="body">
-
-        <div id="gameContainer">
-            <img class="gif" src="NoTanksLeft.gif">
-            <div id="gameText">
-                <div id="gameTitle">No Tanks Left</div>
-                <ul id="gameList">
-                    <li>Local Multiplayer</li>
-                    <li>Party Game</li>
-                </ul>
-                No Tanks Left is a game I completed for a school project. The game is played by only using one button, which turns you right. The tanks will constantly move and shoot. The game can fit as many players as there are keys on a keyboard. I was responsible
-                for coding and designing the game, and my partner helped create some of the art assets.</div>
+      <div id="gameContainer">
+        <img class="gif" src="NoTanksLeft.gif" />
+        <div id="gameText">
+          <div id="gameTitle">No Tanks Left</div>
+          <ul id="gameList">
+            <li>Local Multiplayer</li>
+            <li>Party Game</li>
+          </ul>
+          No Tanks Left is a game I completed for a school project. The game is
+          played by only using one button, which turns you right. The tanks will
+          constantly move and shoot. The game can fit as many players as there
+          are keys on a keyboard. I was responsible for coding and designing the
+          game, and my partner helped create some of the art assets.
         </div>
+      </div>
 
-        <div id="gameContainer">
-            <img class="gif" src="Hopson.gif">
-            <div id="gameText">
-                <div id="gameTitle">Hopson</div>
-                <ul id="gameList">
-                    <li>Puzzle</li>
-                    <li>Arcade</li>
-                </ul>
-                Hopson is a puzzle game based heavily around movement. By consecutively jumping the player gains speed, this mechanic was based off of bhopping from counter-strike, one of my favorite games.</div>
+      <div id="gameContainer">
+        <img class="gif" src="Hopson.gif" />
+        <div id="gameText">
+          <div id="gameTitle">Hopson</div>
+          <ul id="gameList">
+            <li>Puzzle</li>
+            <li>Arcade</li>
+          </ul>
+          Hopson is a puzzle game based heavily around movement. By
+          consecutively jumping the player gains speed, this mechanic was based
+          off of bhopping from counter-strike, one of my favorite games.
         </div>
+      </div>
 
-        <div id="gameContainer">
-            <img class="gif" src="ShapeOfTheForest.gif">
-            <div id="gameText">
-                <div id="gameTitle">Shape of the Forest</div>
-                <ul id="gameList">
-                    <li>Action Platformer</li>
-                    <li>2D Dark Souls</li>
-                </ul>
-                This is a game I am currently working on with a small group of friends. I am in charge of code and development tools which includes, Player Controller, AI, State Machine, Editor Tools, etc. This game has been under development for about 4 months now,
-                and we attend to spend another 8 months working on it.
-            </div>
+      <div id="gameContainer">
+        <img class="gif" src="ShapeOfTheForest.gif" />
+        <div id="gameText">
+          <div id="gameTitle">Shape of the Forest</div>
+          <ul id="gameList">
+            <li>Action Platformer</li>
+            <li>2D Dark Souls</li>
+          </ul>
+          This is a game I am currently working on with a small group of
+          friends. I am in charge of code and development tools which includes,
+          Player Controller, AI, State Machine, Editor Tools, etc. This game has
+          been under development for about 4 months now, and we attend to spend
+          another 8 months working on it.
         </div>
+      </div>
 
-        <div id="gameContainer">
-            <img class="gif" src="Patient.gif">
-            <div id="gameText">
-                <div id="gameTitle">The Patient</div>
-                <ul id="gameList">
-                    <li>3D Immersive Horror</li>
-                    <li>Puzzle</li>
-                </ul>
-                The Patient was a game I worked on with a close friend of mine. The goal of the game is to make your way through the depths of an abandon hospital and escape. However, you are not alone. I was reponsible for coding and my partner created the story and
-                the map.
-            </div>
+      <div id="gameContainer">
+        <img class="gif" src="Patient.gif" />
+        <div id="gameText">
+          <div id="gameTitle">The Patient</div>
+          <ul id="gameList">
+            <li>3D Immersive Horror</li>
+            <li>Puzzle</li>
+          </ul>
+          The Patient was a game I worked on with a close friend of mine. The
+          goal of the game is to make your way through the depths of an abandon
+          hospital and escape. However, you are not alone. I was reponsible for
+          coding and my partner created the story and the map.
         </div>
+      </div>
 
-        <div id="gameContainer">
-            <img class="gif" src="HotlineElf.gif">
-            <div id="gameText">
-                <div id="gameTitle">Hotline Elf</div>
-                <ul id="gameList">
-                    <li>Action Shooter</li>
-                    <li>Game Jam</li>
-                </ul>
-                Hotline Elf is a game I completed in one day at the Tilted Shed Studios Game Jam Event. The two theme words were "eating" and "elf". Our game revolves around eating other elves, using special moves, and gaining power ups. We were even able to add a boss.
-                We managed to tie for first place.
-            </div>
+      <div id="gameContainer">
+        <img class="gif" src="HotlineElf.gif" />
+        <div id="gameText">
+          <div id="gameTitle">Hotline Elf</div>
+          <ul id="gameList">
+            <li>Action Shooter</li>
+            <li>Game Jam</li>
+          </ul>
+          Hotline Elf is a game I completed in one day at the Tilted Shed
+          Studios Game Jam Event. The two theme words were "eating" and "elf".
+          Our game revolves around eating other elves, using special moves, and
+          gaining power ups. We were even able to add a boss. We managed to tie
+          for first place.
         </div>
+      </div>
 
-        <div id="gameContainer">
-            <img class="gif-vert" src="Bounceio.gif">
-            <div id="gameText">
-                <div id="gameTitle">Bounceio</div>
-                <ul id="gameList">
-                    <li>Hyper Casual</li>
-                    <li>Mobile</li>
-                </ul>
-                Bounce IO is a hyper casual game I created in order to learn more about mobile games. I was able to successfully build the game and play on an iOS device.
-            </div>
+      <div id="gameContainer">
+        <img class="gif-vert" src="Bounceio.gif" />
+        <div id="gameText">
+          <div id="gameTitle">Bounceio</div>
+          <ul id="gameList">
+            <li>Hyper Casual</li>
+            <li>Mobile</li>
+          </ul>
+          Bounce IO is a hyper casual game I created in order to learn more
+          about mobile games. I was able to successfully build the game and play
+          on an iOS device.
         </div>
+      </div>
 
-        <div id="gameContainer">
-
-            <img class="gif" src="SpaceSpaceManager.gif">
-            <div id="gameText">
-                <div id="gameTitle">Space Space Manager</div>
-                <ul id="gameList">
-                    <li>Management / Simulation</li>
-                    <li>Game Jam</li>
-                </ul>
-                Space Space Manager is a game I completed in two days with a friend of mine. The theme of the jam was "Space". The gameplay revolves around managing the inventory of your ship by making sure you have enough fuel to make it to the next planet, but also
-                keeping the most value items possible to make money. We got 5th place.
-            </div>
+      <div id="gameContainer">
+        <img class="gif" src="SpaceSpaceManager.gif" />
+        <div id="gameText">
+          <div id="gameTitle">Space Space Manager</div>
+          <ul id="gameList">
+            <li>Management / Simulation</li>
+            <li>Game Jam</li>
+          </ul>
+          Space Space Manager is a game I completed in two days with a friend of
+          mine. The theme of the jam was "Space". The gameplay revolves around
+          managing the inventory of your ship by making sure you have enough
+          fuel to make it to the next planet, but also keeping the most value
+          items possible to make money. We got 5th place.
         </div>
+      </div>
 
-        <div id="gameContainer">
-            <img class="gif" src="Ascension.gif">
-            <div id="gameText">
-                <div id="gameTitle">Ascension</div>
-                <ul id="gameList">
-                    <li>Prototype</li>
-                    <li>Rope Swing Mechanic / Grappling Hook</li>
-                </ul>
-                Ascension is a prototype game I created in a few days but eventually abandonded. The plans of the game involved using a rope swing and physics. to navigate through levels.</div>
+      <div id="gameContainer">
+        <img class="gif-square" src="Dimensioneer.gif" />
+        <div id="gameText">
+          <div id="gameTitle">Dimensioneer</div>
+          <ul id="gameList">
+            <li>Rogue-like</li>
+            <li>Random Generation</li>
+          </ul>
+          Dimensioneer was a very small project I created to help learn about
+          procedural generation in rogue-like games. The world is randomly
+          generated from a large grid, and after generation the tile sprites and
+          hitboxes are re-rendered to match the generation.
         </div>
+      </div>
 
+      <div id="gameContainer">
+        <img class="gif" src="Ascension.gif" />
+        <div id="gameText">
+          <div id="gameTitle">Ascension</div>
+          <ul id="gameList">
+            <li>Prototype</li>
+            <li>Rope Swing Mechanic / Grappling Hook</li>
+          </ul>
+          Ascension is a prototype game I created in a few days but eventually
+          abandonded. The plans of the game involved using a rope swing and
+          physics. to navigate through levels.
+        </div>
+      </div>
     </body>
+  </div>
 
-</div>
-
-<div id="footer">
+  <div id="footer">
     <footer>Copyright Ⓒ 2020 Luke Bradaric.</footer>
-</div>
-
+  </div>
 </html>
