Added Rain Walk

--- a/contact.html
+++ b/contact.html
@@ -1,84 +1,80 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<div id="header">
-    <header>Luke Bradaric
-        <!-- <button>Contact<a href="contact.html"></a></button> -->
-        <a href="index.html"><button id="contactButton">Home</button></a>
+  <div id="header">
+    <header>
+      Luke Bradaric
+      <!-- <button>Contact<a href="contact.html"></a></button> -->
+      <a href="index.html"><button id="contactButton">Home</button></a>
     </header>
+  </div>
 
-</div>
-
-<div>
-
+  <div>
     <body id="body">
-        <div id="about" , style="padding-bottom: 10px; font-size: 18;">
+      <div id="about" , style="padding-bottom: 10px; font-size: 18;">
+        <div id="aboutTitle">About</div>
 
-            <div id="aboutTitle">About</div>
-
-            <div>I started coding when I was 16 and soon after discovered I could create video games which pushed me to pursue coding even further. I have spent countless hours playing Video games while growing up. To name a few, Minecraft, Portal, and Counter-Strike
-                are some of my favorites, and the thought that I may someday create something similar continues to inspire me.</div>
+        <div>
+          I started coding when I was 16 and soon after discovered I could
+          create video games which pushed me to pursue coding even further. I
+          have spent countless hours playing Video games while growing up. To
+          name a few, Minecraft, Portal, and Counter-Strike are some of my
+          favorites, and the thought that I may someday create something similar
+          continues to inspire me.
         </div>
+      </div>
 
-        <div id="about">
+      <div id="about">
+        <!-- <div>All games made in Unity Engine with C#</div> -->
+        <div id="aboutTitle">Proficiencies</div>
+        <ul id="list">
+          <div id="aboutSubTitle">Programming Languages</div>
 
-            <!-- <div>All games made in Unity Engine with C#</div> -->
-            <div id="aboutTitle">Proficiencies</div>
-            <ul id="list">
+          <li>C#</li>
+          <li>Java</li>
+          <li>Python</li>
+          <li>JavaScript</li>
+          <li>Html</li>
+          <li>Css</li>
 
-                <div id="aboutSubTitle">Programming Languages</div>
+          <div id="aboutSubTitle" , style="padding-top: 20px;">Software</div>
 
-                <li>C#</li>
-                <li>Java</li>
-                <li>Python</li>
-                <li>Html</li>
-                <li>Css</li>
+          <li>Unity Engine</li>
+          <li>Adobe Photoshop</li>
+          <li>Audacity</li>
+          <li>Sony Vegas Pro</li>
+        </ul>
+      </div>
 
-                <div id="aboutSubTitle" , style="padding-top: 20px;">Software</div>
+      <!---->
 
-                <li>Unity Engine</li>
-                <li>Adobe Photoshop</li>
-                <li>Audacity</li>
-                <li>Sony Vegas Pro</li>
+      <div id="about">
+        <div id="aboutTitle">Contact</div>
 
-            </ul>
+        <ul id="list">
+          <li id="contactLink">
+            <a href="mailto: lukebradaric@gmail.com" , id="contactLink"
+              >Email - lukebradaric@gmail.com</a
+            >
+          </li>
 
-        </div>
+          <li id="contactLink">
+            <a href="https://github.com/lukebradaric" , id="contactLink"
+              >Github - lukebradaric</a
+            >
+          </li>
 
-        <!---->
-
-        <div id="about">
-
-            <div id="aboutTitle">Contact</div>
-
-            <ul id="list">
-
-                <li id="contactLink">
-                    <a href="mailto: lukebradaric@gmail.com" , id="contactLink">Email - lukebradaric@gmail.com</a>
-                </li>
-
-                <li id="contactLink">
-                    <a href="https://github.com/lukebradaric" , id="contactLink">Github - lukebradaric</a>
-                </li>
-
-                <li id="contactLink">
-                    Discord - Luke#8921
-                </li>
-
-            </ul>
-
-        </div>
-
-
+          <li id="contactLink">
+            Discord - Luke#8921
+          </li>
+        </ul>
+      </div>
     </body>
+  </div>
 
-</div>
-
-<div id="footer">
+  <div id="footer">
     <footer>Copyright Ⓒ 2020 Luke Bradaric.</footer>
-</div>
-
+  </div>
 </html>
