--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
       </div>
 
       <div id="gameContainer">
-        <img class="gif" src="Hopson.gif" />
+        <img class="gif" src="RainWalk.gif" />
         <div id="gameText">
-          <div id="gameTitle">Hopson</div>
+          <div id="gameTitle">Rain Walk</div>
           <ul id="gameList">
-            <li>Puzzle</li>
-            <li>Arcade</li>
+            <li>Post Processing</li>
+            <li>Shaders</li>
           </ul>
-          Hopson is a puzzle game based heavily around movement. By
-          consecutively jumping the player gains speed, this mechanic was based
-          off of bhopping from counter-strike, one of my favorite games.
+          Rain Walk is a small scene I created in order to study environmental
+          design. I learned things such as shaders, post processing, and scene
+          lighting.
         </div>
       </div>
 
@@ -58,6 +58,20 @@
           Player Controller, AI, State Machine, Editor Tools, etc. This game has
           been under development for about 4 months now, and we attend to spend
           another 8 months working on it.
+        </div>
+      </div>
+
+      <div id="gameContainer">
+        <img class="gif" src="Hopson.gif" />
+        <div id="gameText">
+          <div id="gameTitle">Hopson</div>
+          <ul id="gameList">
+            <li>Puzzle</li>
+            <li>Arcade</li>
+          </ul>
+          Hopson is a puzzle game based heavily around movement. By
+          consecutively jumping the player gains speed, this mechanic was based
+          off of bhopping from counter-strike, one of my favorite games.
         </div>
       </div>
 
