pattern link fix

--- a/pattern.html
+++ b/pattern.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="patterns.css" />
+    <link rel="stylesheet" href="pattern.css" />
     <title>Pattern</title>
   </head>
 
